Fix disable overflow setting on modals

--- a/resources/css/components/modal.css
+++ b/resources/css/components/modal.css
@@ -18,6 +18,6 @@
     @apply p-0 mb-6;
 }
 
-.vm--overlay.disable-overflow .v--modal {
-    overflow: initial;
+.vm--container.disable-overflow .vm--modal {
+    overflow: initial !important;
 }
